<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OpeningMenu" >

    <TextView
    	android:id="@+id/mainTitle"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentTop="true"
    	android:layout_centerHorizontal="true"
    	android:text="@string/warhammerOptimiser"
    	android:textAppearance="?android:attr/textAppearanceLarge"
    	android:typeface="serif" />

    <TextView
    	android:id="@+id/textName"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/mainTitle"
    	android:layout_centerHorizontal="true"
    	android:text="@string/defaultCharacterName"
    	android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
    	android:id="@+id/buttonOpeningCreate"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/textName"
    	android:layout_centerHorizontal="true"
    	android:text="@string/quickCharacterCreation"
    	android:onClick="create" />

    <Button
    	android:id="@+id/buttonOpeningCustomise"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/buttonOpeningCreate"
    	android:layout_centerHorizontal="true"
    	android:text="@string/customiseCharacter"
    	android:onClick="customise" />

    <Button
    	android:id="@+id/buttonOpeningOptimise"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/buttonOpeningCustomise"
    	android:layout_centerHorizontal="true"
    	android:text="@string/optimiseCharacter"
    	android:onClick="optimise" />

</RelativeLayout>
