<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".Optimisations" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:orientation="vertical" >

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:text="@string/optimisations"
				android:textAppearance="?android:attr/textAppearanceLarge" />
		</RelativeLayout>

		<View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="@color/black" />

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<Button
				android:id="@+id/buttonAverageDamage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:onClick="averageDamage"
				android:text="@string/averageDamage" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<Button
				android:id="@+id/buttonBestActionCards"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:onClick="bestActionCards"
				android:text="@string/bestActionCards" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<Button
				android:id="@+id/buttonBestEquipment"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:text="@string/bestEquipment" />
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<Button
				android:id="@+id/buttonBestStance"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerInParent="true"
				android:text="@string/bestStance" />
		</RelativeLayout>
	</LinearLayout>

</RelativeLayout>