<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".AverageDamage" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/textThreatRating"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/monsterThreatRating"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<ToggleButton
				android:id="@+id/toggleButtonSkull0"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/skull_toggle_button"
				android:gravity="center"
				android:onClick="updateActionCards"
				android:textOff="0"
				android:textOn="0" />
			<ToggleButton
				android:id="@+id/toggleButtonSkull1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/skull_toggle_button"
				android:gravity="center"
				android:onClick="updateActionCards"
				android:textOff="1"
				android:textOn="1" />
			<ToggleButton
				android:id="@+id/toggleButtonSkull2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/skull_toggle_button"
				android:gravity="center"
				android:onClick="updateActionCards"
				android:textOff="2"
				android:textOn="2" />
			<ToggleButton
				android:id="@+id/toggleButtonSkull3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/skull_toggle_button"
				android:gravity="center"
				android:onClick="updateActionCards"
				android:textOff="3"
				android:textOn="3" />
			<ToggleButton
				android:id="@+id/toggleButtonSkull4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/skull_toggle_button"
				android:gravity="center"
				android:onClick="updateActionCards"
				android:textOff="4"
				android:textOn="4" />
			<ToggleButton
				android:id="@+id/toggleButtonSkull5"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/skull_toggle_button"
				android:gravity="center"
				android:onClick="updateActionCards"
				android:textOff="5"
				android:textOn="5" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/layoutActionCards"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
		</LinearLayout>

		<TextView
			android:id="@+id/textTryAnotherActionCard"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/tryAnotherActionCard"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<Spinner
			android:id="@+id/spinActionCards"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<Button
			android:id="@+id/buttonChangeYourActionCards"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/changeYourActionCards"
			android:onClick="chooseActionCards" />
		
		<Button
			android:id="@+id/buttonCustomiseCharacter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/customiseCharacter"
			android:onClick="customiseCharacter" />
		
	</LinearLayout>

</ScrollView>